--- a/gulp/new-waterflow/package.json
+++ b/gulp/new-waterflow/package.json
@@ -16,11 +16,13 @@
   "devDependencies": {
     "browser-sync": "^2.17.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-browserify": "^0.5.1",
     "gulp-connect": "^5.0.0",
     "gulp-if": "^2.0.1",
     "gulp-jade": "^1.1.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0"
   }
